    FIXED: dragging over a new tab changes active tab
    FIXED: crash at pressing space on the '..' directory
    UPDATED: German translation

1.40-beta1
======================   
    ADDED: configuring the colors of the panel
    ADDED: (a bug fix really) ability to "not test archives before unpacking"
    ADDED: new icons (thanks to adios for providing them)
    ADDED: quickmode for mountman. press and HOLD the mountman icon for new functionality
    ADDED: Bulgarian translation (thanks to Milen Ivanov)
    ADDED: krusader restart is not necessary from now after changing the configuration
    ADDED: ability to give arguments for the terminal
    ADDED: enable/disable icons in the filenames
    ADDED: ability to configure the fields of the panel (Ext, Size, Perm, ...)
    ADDED: single click selects / executes
    ADDED: panel level toolbar ('..', '/', '~', '=' buttons), thanks to David Harel
    ADDED: Locate (integrating the findutils-locate package of GNU into Krusader). TEST IT
    ADDED: Heiner's patch for 'logical selection mode' is applied and used as default. TEST IT
    ADDED: application dependency setting in konfigurator
    ADDED: Csaba's new konfigurator is here, boys and girls!
    ADDED: heiner's quicksearch patch
    ADDED: calculate occupied space prints the directory's size (wincmd-style) - thanks heiner!
    ADDED: current directory in history menu is checked
    ADDED: a working user menu (try alt+~), but a bit rough on the edges
    ADDED: KrSearch edit/view file in the result list window (F3, F4, right click)
    ADDED: a folder-history button, a-la-total commander. thanks to Hans Loffler!
    ADDED: selectall at rename
    ADDED: new shortcuts to search dialog (heiner)
    ADDED: directory synchronizer
    ADDED: file splitter
    ADDED: a missing credit for Frank in the about box
    FIXED: krusader exits at closing the viewer when minimized to tray
    FIXED: KDE 3.2 terminal exit at Ctrl+C