@@ -1,3 +1,4 @@
+    FIXED: KDE 3.2, right justified tabs bug
     FIXED: dragging over a new tab changes active tab
     FIXED: crash at pressing space on the '..' directory
     UPDATED: German translation
